# Thesis_ECG_Authentication_demo

./: .dockerignore  .gitattributes  Dockerfile  Implementation_ECG_Authentication_Architecture.ipynb  README.md  app.py  pyproject.toml
ecg_segment/: diff_pair_2.txt  same_pair_1.txt  same_pair_2.txt
