[project]
name = "ecg-biometrics-gradio-demo"
version = "0.1.0"
description = "Multi-model ECG biometric verification Gradio demo for thesis artifacts."
requires-python = ">=3.10,<3.12"
dependencies = [
    "gradio>=4.44.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.4.0",
    "joblib>=1.3.0",
    "matplotlib>=3.8.0",
    "torch>=2.2.0",
]

[tool.uv]
package = false
